# zsyntax

./: CHANGELOG.md  Makefile  README  README.md  cabal.project  calculus.tex  stack.yaml  zsyntax.cabal
app/: Main.hs
benchmark/: Main.hs
docs/: Makefile  calculus.tex  docs.cls  docs.org  docs.tex
docs/bibliography/: 2010paper.bib  a-history-of-haskell-being-lazy-with-class.bib  adding-logic.bib  andreoli92.bib  chaudhuri-paper.bib  chaudhuri-thesis.bib  default.bib  dependent-haskell.bib  gadts.bib  girard-on-the-unity.bib  inverse.bib  ll-syntax-semantics.bib  melanoma.bib  mell-dec.bib  non-mono.bib  otter.bib  richman.bib  unif.bib
docs/sections/: backward.tex  checking.tex  cut-quad.tex  cut.tex  der-terms.tex  focused-inverse.tex  focused.tex  further-work.tex  implementation.tex  introduction.tex  inverse.tex  search.tex  zsyntax.tex
examples/: bool  glycolytic  melanoma  regulatoryloop
otter-loop/: otter-loop.cabal  package.yaml
otter-loop/src/: Otter.hs
otter-loop/src/Otter/: Relation.hs  Search.hs  SearchRes.hs  Structures.hs
otter-loop/src/Otter/Internal/: Structures.hs
src/: #Zsyntax.hs#  AppMonad.hs  CLI.hs  Checking.hs  Command.hs  Context.hs  ControlSet.hs  DerivationTerm.hs  Filterable.hs  Formula.hs  ForwardSequent.hs  Frontier.hs  GUI.hs  LFormula.hs  LabelledSequent.hs  LinearContext.hs  Otter.hs  Parser.hs  Prover.hs  Rel.hs  RelFormula.hs  Relation.hs  Rule.hs  Rules.hs  SFormula.hs  Search.hs  SimpleDerivationTerm.hs  TypeClasses.hs  UnrestrContext.hs  Utils.hs  Zsyntax.hs
src/CLI/: App.hs  Command.hs
src/Checking/: #Classes.hs#  Checker.hs  ConstrCtxt.hs  Constraints.hs  DerivationTerm.hs  Generation.hs  Generation_old.hs  Solving.hs  Unification.hs  World.hs
src/Checking/ReactLists/: RList.hs  Sets.hs
src/Command/: Execution.hs  Export.hs  Parser.hs  Structures.hs
src/GUI/: Command.hs  Control.hs  Elements.hs
src/LinearContext/: LinearCtxt.hs  PosInt.hs
src/Otter/: Rule.hs  SearchRes.hs
src/Otter/Internal/: Search.hs  Structures.hs
src/Prover/: Class.hs  Frontier.hs  Operations-deleted.hs  Operations.hs  Search.hs  Structures.hs  Transformer.hs
src/Rules/: Frontier.hs  Interface.hs  Relation.hs
src/Zsyntax/: #ReactionList.hs#  Formula.hs  ReactionList.hs
src/Zsyntax/Labelled/: DerivationTerm.hs  Formula.hs  Rule.hs
src/Zsyntax/Labelled/Rule/: BipoleRelation.hs  Frontier.hs  Interface.hs
test/: Main.hs
zsyntax-cli/: CHANGELOG.md  Main.hs  README  cabal.project  zsyntax-cli.cabal
zsyntax-cli/examples/: bool2  boolaxs  feedforwardloop  glucose-example
zsyntax-cli/src/Zsyntax/CLI/: App.hs  Command.hs  Execution.hs  Structures.hs  Utils.hs
zsyntax-cli/src/Zsyntax/UI/: Core.hs
zsyntax-cli/test/: Main.hs
zsyntax-client/: ChangeLog.md  LICENSE  zsyntax-client.cabal
zsyntax-client/app/: Main.hs
zsyntax-client/src/: GUI.hs
zsyntax-client/src/GUI/: Command.hs  Control.hs
zsyntax-core/: zsyntax-core.cabal
zsyntax-core/src/: Context.hs  ForwardSequent.hs  LinearContext.hs  Parsing.hs  Prover.hs  SFormula.hs  SimpleDerivationTerm.hs  TH.hs  UnrestrContext.hs  Utils.hs
zsyntax-core/src/Checking/ReactLists/: Sets.hs
zsyntax-core/src/Checking/Simple/: Constraint.hs  World.hs
zsyntax-core/src/Command/: Structures.hs
zsyntax-core/src/Prover/: Structures.hs
zsyntax-core/test/: Spec.hs
