name:           zsyntax
version:        0.2.0.0
description:    An automated theorem prover for Zsyntax, a
                logical calculus for molecular biology inspired by linear logic,
                that can be used to automatically verify biological
                pathways expressed as logical sequents.

                The prover implements automatic proof search for the Zsyntax
                sequent calculus (ZBS), a context-sensitive calculus for a
                fragment of multiplicative linear logic as developed in
                <https://doi.org/10.1093/logcom/exy028>, where sequents are
                decorated so to account for the biochemical constraints.

category:       Logic, Theorem Provers, Bioinformatics
synopsis:       Automated theorem prover for the Zsyntax biochemical calculus
homepage:       https://github.com/fsestini/zsyntax#readme                 
bug-reports:    https://github.com/fsestini/zsyntax/issues
author:         Filippo Sestini
maintainer:     sestini.filippo@gmail.com
copyright:      2018 Filippo Sestini
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  2

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/fsestini/zsyntax

library

  exposed-modules:
      Zsyntax
      Zsyntax.Formula
      Zsyntax.ReactionList

      Zsyntax.Labelled.Rule
      Zsyntax.Labelled.Formula
      Zsyntax.Labelled.DerivationTerm

      Zsyntax.Labelled.Rule.BipoleRelation
      Zsyntax.Labelled.Rule.Frontier
      Zsyntax.Labelled.Rule.Interface

  default-extensions:
      LambdaCase
      TupleSections
  hs-source-dirs: src
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
      -- -Werror
  build-depends:
      base >=4.7 && <5
    , constraints
    , containers
    , multiset
    , mtl
    , otter-loop
    , parsec
    , composition
    , microlens-platform
    , extra
  default-language: Haskell2010

test-suite zsyntax-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  build-depends:    base >=4.7 && <5, zsyntax, otter-loop, containers
                  , multiset, mtl
  main-is:          Main.hs
  default-language: Haskell2010