name:           otter-loop
version:        0.2.0.0
description:    Please see the README on Github
license:        BSD3
build-type:     Simple
cabal-version:  >= 1.10

library
  exposed-modules:
      Otter
      Otter.Relation
      Otter.Search
      Otter.SearchRes
      Otter.Structures
  other-modules:
      Paths_otter_loop
  hs-source-dirs:
      src
  default-extensions: TupleSections
  ghc-options:
      -Wall
      -Wno-unused-top-binds
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
  build-depends:
      base >=4.7 && <5
    , constraints >= 0.10.1 && < 0.11
    , containers >= 0.6.0 && < 0.7
    , mtl >= 2.2.2 && < 2.3
  default-language: Haskell2010
