cabal-version:  2.4
name:           zsyntax-cli
version:        0.2.0.1
description:    Command line interface to Zsyntax, a theorem prover for
                biochemical interactions.
homepage:       https://github.com/fsestini/zsyntax#readme
bug-reports:    https://github.com/fsestini/zsyntax/issues
author:         Filippo Sestini
maintainer:     sestini.filippo@gmail.com
copyright:      2018 Filippo Sestini
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple

extra-source-files:
    README
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/fsestini/zsyntax

library
  exposed-modules:
      Zsyntax.CLI.App
      Zsyntax.CLI.Command
      Zsyntax.CLI.Execution
      Zsyntax.CLI.Structures
      Zsyntax.CLI.Utils

  default-extensions:
      LambdaCase
      TupleSections
  hs-source-dirs: src
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints
      -Wno-unticked-promoted-constructors
      -- -Werror
  build-depends:
      base >=4.7 && <5
    , constraints < 0.13.5
    , containers < 0.6.6
    , multiset < 0.3.5
    , mtl < 2.2.3
    , parsec < 3.1.16
    , composition >= 1.0.2 && < 1.1
    , microlens-platform < 0.4.4
    , haskeline < 0.8.3
    , extra < 1.7.14
    , zsyntax < 0.2.1
    , exceptions < 0.10.5
    , text
  default-language: Haskell2010

executable zsyntax
  main-is: Main.hs
  other-modules:
      Paths_zsyntax_cli
  hs-source-dirs: .
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , zsyntax-cli
  default-language: Haskell2010
